Revert Java 9+ support in download RC script